--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.13.2",
     "beautifulsoup4>=4.14.2",
+    "brotli>=1.1.0",
     "fastapi>=0.122.0",
     "httpx>=0.28.1",
     "lxml>=6.0.2",
