--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pypdf>=6.4.0",
     "python-dotenv>=1.2.1",
     "uvicorn[standard]>=0.38.0",
+    "pillow>=10.0.0",
 ]
 
 [project.scripts]
