--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ dependencies = [
     "aiohttp>=3.13.2",
     "beautifulsoup4>=4.14.2",
     "brotli>=1.1.0",
+    "duckdb>=1.3.2",
     "fastapi>=0.122.0",
     "httpx>=0.28.1",
     "lxml>=6.0.2",
+    "networkx>=3.5.0",
     "numpy>=2.3.5",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
