Remove test files and improve LLM analysis
- Remove all test_*.py files
- Remove test_server and test_quiz_server directories
- Improve LLM prompt to use existing DataFrame variable
- Add code validation to strip DataFrame redefinitions
- Fix format_answer_dynamically for string type answers
- Add gtts dependency for audio generation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "uvicorn[standard]>=0.38.0",
     "pillow>=10.0.0",
+    "pyngrok>=7.5.0",
+    "gtts>=2.5.4",
 ]
 
 [project.scripts]
