chore: Update .gitignore to exclude test and temp files
- Exclude test files (test_*.py, run_*_test.py, verify_*.py)
- Exclude analysis and summary markdown files
- Exclude test server directory
- Exclude temporary zip files and cache directories
- Keep production code clean

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,19 @@ Thumbs.db
 # Logs
 *.log
 logs/
+# Test files and temporary docs
+*.pyc
+__pycache__/
+.pytest_cache/
+*.log
+.llm-analysis-test-cases/
+test_*.py
+run_*_test.py
+verify_*.py
+test_server/
+ANALYSIS*.md
+IMPLEMENTATION_SUMMARY.md
+*.zip
+.vscode/
+.idea/
+
